<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PirateBox</string>
    <string name="notification_message">PirateBox is running &#8230;</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="menu_preferences">Settings</string>
    <string name="create_directory">Create Directory</string>
    <string name="pref_start_on_boot_title">Start On Boot</string>
    <string name="pref_start_on_boot_summary">Startup PirateBox on device boot</string>
    <string name="pref_ssid_name_title">SSID Name</string>
    <string name="pref_ssid_name_summary">Specify the PirateBox SSID name</string>
    <string name="pref_storage_dir_title">Storage Directory</string>
    <string name="pref_storage_dir_summary">Storage directory for upload and shoutbox data</string>   
    <string name="pref_web_i18n_title">Web Interface Language</string>
    <string name="pref_web_i18n_summary">Language used for the web interface\nTo take effect the PirateBox has to be restarted.</string>   
    <string name="pref_ssid_name_default">PirateBox - Share Freely</string>
    <string name="pref_storage_dir_default">/sdcard/pb_store</string>
    <string name="pref_advanced_settings_title">Advanced Settings</string>
    <string name="pref_statistics_title">Statistics</string>
    <string name="pref_device_options_title">Device Options</string>
    <string name="pref_dev_options_title">Developer Options</string>
    <string name="pref_info_title">Info</string>
    <string name="pref_enable_updates_title">Enable Updates</string>
    <string name="pref_enable_updates_summary">Update configuration and HTML files on new app version</string>
    <string name="pref_ios_wispr_title">iOS WISPr Support</string>
    <string name="pref_ios_wispr_summary">Enable support for iOS WISPr requests</string>
    <string name="pref_wp_ncsi_title">WP NCSI Support</string>
    <string name="pref_wp_ncsi_summary">Respond to Windows Phone NCSI requests</string>
    <string name="pref_ap_auto_start_title">Autostart AP</string>
    <string name="pref_ap_auto_start_summary">Start Access Point automatically, otherwise the AP has to be started manually.</string>
    <string name="pref_configure_ap_title">Configure AP</string>
    <string name="pref_configure_ap_summary">Creates an open AP on startup.\nIf this option is not selected, the existing AP configuration will be used.</string>
    <string name="pref_ap_ip_title">AP IP Number</string>
    <string name="pref_ap_ip_summary">Change the Access Point IP Number if necessary</string>
    <string name="pref_upload_size_title">Upload Size in MB</string>
    <string name="pref_upload_size_summary">The upload size limit in MB\nTo take effect the PirateBox has to be restarted.</string>
    <string name="pref_domain_name_title">Domain Name</string>
    <string name="pref_domain_name_summary">Domain name used if pages are not found</string>
    <string name="pref_domain_name_default">pirate.box</string>
    <string name="pref_keep_device_on_title">Keep Device On</string>
    <string name="pref_keep_device_on_summary">Forces the device to stay on\nTo take effect the PirateBox has to be restarted.</string>
    <string name="pref_ap_ip_default">192.168.43.1</string>
    <string name="pref_dev_content_sd_title">Content to SD</string>
    <string name="pref_dev_content_sd_summary">Copy configuration and HTML files to SD card (\"piratebox\" folder) and use at runtime</string>
    <string name="pref_dev_piratebox_info_title">PirateBox Info</string>
    <string name="pref_dev_piratebox_info_summary">Information about this PirateBox</string>
    <string name="pref_dev_info_piratebox_version_title">PirateBox Version</string>
    <string name="pref_dev_info_paw_version_title">PAW Server Version</string>
    <string name="pref_dev_info_ap_ip_address">Access Point IP Address</string>
    <string name="pref_dev_info_ip_address">Local IP Address</string>
    <string name="pref_dev_info_local_port_title">Local Port</string>
    <string name="pref_dev_info_uploads_title">Uploaded Files</string>
    <string name="pref_dev_info_messages_title">Messages</string>
    <string name="pref_dev_info_connections_title">Total Connections</string>
    <string name="pref_dev_info_max_upload_size_title">Maximum Upload Size</string>
    <string name="pref_dev_info_default_summary">-</string>
    <string name="pref_dev_restore_dnsmasq_title">Restore \"dnsmasq\" Binary</string>
    <string name="pref_dev_restore_dnsmasq_summary">Click to restore the original \"dnsmasq\" system binary</string>
    <string name="pref_dev_reset_networking_title">Reset Networking</string>
    <string name="pref_dev_reset_networking_summary">Flush NAT table to reset network redirects</string>  
    <string name="pref_emulate_droopy_title">Emulate Droopy</string>
    <string name="pref_emulate_droopy_summary">Enable file uploads on port 8080</string>   
    <string name="pref_enable_statistics_title">Enable Statistics</string>
    <string name="pref_enable_statistics_summary">Store visitor and download statistics to database</string>
    <string name="pref_clear_statistics_title">Clear Statistics</string>
    <string name="pref_clear_statistics_summary">Deletes all statistic database entries</string>
    <string name="msg_setting_up_networking">Setting up networking, please wait&#8230;</string>
    <string name="pref_external_server_title">External Server</string>
    <string name="pref_use_external_server_title">Enable External Server</string>
    <string name="pref_use_external_server_summary">Use an external server instead of the built-in PAW server</string>
    <string name="pref_external_server_port_title">External Server Port</string>
    <string name="pref_external_server_port_summary">External server port number (defaults to 8080)</string>
    <string name="pref_external_server_port_default">8080</string>
    <string name="pref_privacy_statement">Privacy Statement</string>
    <string name="msg_ap_up">AccessPoint is up</string>
    <string name="msg_ap_down">AccessPoint is down</string>
    <string name="msg_networking_up">Networking is up</string>
    <string name="msg_networking_down">Networking is down</string>
    <string name="msg_webserver_up">Webserver is up</string>
    <string name="msg_webserver_down">Webserver is down</string>
    <string name="msg_piratebox_up">PirateBox is running</string>
    <string name="msg_piratebox_down">PirateBox not running</string>
    <string name="msg_max_post_invalid">Invalid upload size! Will be set to {0}.</string>
    <string name="msg_external_server">External Server</string>
    <string name="chk_unsupported_device">Unsupported device!</string>
    <string name="chk_not_rooted">Device not rooted</string>
    <string name="chk_missing_dnsmasq">Command \"dnsmasq\" not found</string>
    <string name="chk_missing_dnsmasq_backup">Backup for \"dnsmasq\" could not be created</string>
    <string name="chk_missing_iptables">Command \"iptables\" not found</string>
    <string name="dialog_title_info">Info</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_confirm">Confirm</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_msg_wrap_error">The \"dnsmasq\" wrappper returned an error. The PirateBox might not work properly!</string>
    <string name="dialog_msg_dnsmasq_restore_ok">The original \"dnsmasq\" has been restored.</string>
    <string name="dialog_msg_dnsmasq_restore_error">The original \"dnsmasq\" could NOT be restored!</string>
    <string name="dialog_msg_network_reset">NAT table has been flushed.\nAll network redirects should be deleted.</string>
    <string name="dialog_qst_clear_statistics">This will delete all statistic data.\nReally clear statistis?</string>  
    <string name="dialog_msg_clear_statistics">All statistics have been deleted.</string>
    <string name="dialog_title_choose_directory">Choose Directory</string>
    <string name="dialog_title_create_directory">Create Directory</string>
    <string name="dialog_label_directory_name">Directory Name</string> 
    <string name="widget_info_label">PirateBox Info</string>
    <string name="widget_info_connections">Connects</string>
    <string name="widget_info_shouts">Shouts</string>
    <string name="widget_info_uploads">Uploads</string>
    <string name="locale_on">ON</string>
    <string name="locale_off">OFF</string>
    <string name="warning_dir_not_writable">Warning: Directory is not writable!</string>
    <string name="wear_notification_upload_title">File Upload</string>
    <string name="wear_notification_upload_open_file">Open File</string>
    <string name="wear_notification_shout_title">Shout from {0}</string>
    <string name="wear_notifications_available">Notifications available on Android Wear</string>
    <string name="wear_summary_notification_title">PirateBox &#8634; Wear</string>
    <string name="pref_wear_title">Android Wear</string>
    <string name="pref_wear_notifications_title">Wear Notifications</string>
    <string name="pref_wear_notifications_summary">Enable Android Wear notifications for uploads and shouts</string>
</resources>