<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="startOnBoot"
        android:summary="@string/pref_start_on_boot_summary"
        android:title="@string/pref_start_on_boot_title" />

    <EditTextPreference
        android:defaultValue="@string/pref_ssid_name_default"
        android:key="ssidName"
        android:password="false"
        android:singleLine="true"
        android:summary="@string/pref_ssid_name_summary"
        android:title="@string/pref_ssid_name_title" />
    <EditTextPreference
        android:defaultValue="@string/pref_storage_dir_default"
        android:key="storageDir"
        android:password="false"
        android:singleLine="true"
        android:summary="@string/pref_storage_dir_summary"
        android:title="@string/pref_storage_dir_title" />

    <PreferenceCategory
        android:title="@string/pref_advanced_settings_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="update"
            android:summary="@string/pref_enable_updates_summary"
            android:title="@string/pref_enable_updates_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="autoApStartup"
            android:summary="@string/pref_ap_auto_start_summary"
            android:title="@string/pref_ap_auto_start_title" />
     </PreferenceCategory>
        
     <PreferenceCategory
        android:title="@string/pref_device_options_title" >   
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="iosWispr"
            android:summary="@string/pref_ios_wispr_summary"
            android:title="@string/pref_ios_wispr_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wpNcsi"
            android:summary="@string/pref_wp_ncsi_summary"
            android:title="@string/pref_wp_ncsi_title" />
    </PreferenceCategory>
    
     <PreferenceCategory
        android:title="@string/pref_dev_options_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="devContentSd"
            android:summary="@string/pref_dev_content_sd_summary"
            android:title="@string/pref_dev_content_sd_title" />
     </PreferenceCategory>
     
     <PreferenceCategory
        android:title="@string/pref_info_title" >
	     <PreferenceScreen
	        android:title="@string/pref_dev_piratebox_info_title" 
	        android:summary="@string/pref_dev_piratebox_info_summary">
	        <intent android:action=".InfoPreferencesActivity"/>
	   </PreferenceScreen>
	 </PreferenceCategory>
</PreferenceScreen>